# everarcade-compiler

./: .gitignore  ARCHITECTURE.md  ATT_V0_1_REFERENCE_IMPLEMENTATION.md  ATT_V0_1_REVIEW_HISTORY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  LICENSE  MATURITY.md  OPEN_SOURCE_CANDIDATE_RC1.md  OPEN_SOURCE_CANDIDATE_RC2.md  OPEN_SOURCE_READINESS.md  PUBLIC_NARRATIVE_AUDIT.md  QUICKSTART.md  README.md  REPOSITORY_BOUNDARY.md  REPOSITORY_MAP.md  REPOSITORY_POLICY.md  SECURITY.md  START_HERE.md  TESTNET_LAUNCH_PAGE.md  TRUST_ROOT.md  VERIFICATION.md  VERIFICATION_CLASSES.md  VERIFICATION_STATUS.md  WORLD_RELEASE_ATTESTATION_V0_1_FREEZE.md  arena-lint.mjs  docusaurus.config.js  execution_plan.json  federation_validation_runtime.rs  main.py  package-lock.json  package.json  peer_validation_runtime.rs  plan.json  routing_validation_runtime.rs  runtime-archive-status  runtime-autoscaling-status  runtime-deployment-manifest  (+36 more)
crates/canonicalizer-kernel/: Cargo.toml
crates/canonicalizer-kernel/src/: lib.rs
crates/canonicalizer-kernel/tests/: fixtures.rs  properties.rs
execution-core/: Cargo.toml  execution_plan.json
execution-core/src/: abi.rs  arena_vanguard_live.rs  contract.rs  dag.rs  dag_loader.rs  diagnostics.rs  diagnostics_tests.rs  executables.rs  execute.rs  executor.rs  hash.rs  hashing.rs  increment.rs  lib.rs  live_world_ops.rs  main.rs  payload.rs  receipt.rs  receipt_canonical.rs  registry.rs  replay.rs  runner.rs  scheduler.rs  set.rs  spec.rs  state.rs  types.rs  wasm.rs  wasm_engine.rs  xrpl_signer.rs
execution-core/src/abi/: abi_validation.rs  abi_version.rs  host_error.rs  host_input.rs  host_output.rs  host_receipt.rs
execution-core/src/ai_memory/: continuity.rs  mod.rs  restoration.rs  runtime.rs  store.rs  validation.rs
execution-core/src/ai_runtime/: behavior.rs  decision.rs  memory.rs  mod.rs  planner.rs  recovery.rs  runtime.rs  scheduler.rs  validation.rs
execution-core/src/amendment/: amendment.rs  amendment_execution.rs  amendment_lineage.rs  amendment_root.rs  amendment_transition.rs  amendment_validation.rs  mod.rs
execution-core/src/api/: continuity.rs  execution.rs  mod.rs  restoration.rs  runtime.rs  validation.rs
execution-core/src/arbitration/: arbitration_case.rs  arbitration_lineage.rs  arbitration_root.rs  arbitration_validation.rs  constitutional_court.rs  constitutional_dispute.rs  constitutional_review.rs  constitutional_ruling.rs  dispute_resolution.rs  judicial_lineage.rs  judicial_validation.rs  mod.rs
execution-core/src/assets/: mod.rs
execution-core/src/authority/: descriptor.rs  epoch.rs  errors.rs  handoff.rs  mod.rs  policy.rs  proof.rs  registry.rs  rotation.rs  verification.rs
execution-core/src/autonomous_world_recovery/: civilization.rs  ecology.rs  evolution.rs  mod.rs  recovery.rs  runtime.rs  social_memory.rs  validation.rs
execution-core/src/behavior_tree/: execution.rs  mod.rs  node.rs  recovery.rs  runtime.rs  scheduler.rs  validation.rs
execution-core/src/budget/: budget_result.rs  budget_validation.rs  epoch_budget.rs  execution_budget.rs  mod.rs  proof_budget.rs  replay_budget.rs  storage_budget.rs
execution-core/src/canonical/: encoding.rs  errors.rs  hashes.rs  manifests.rs  mod.rs
execution-core/src/capability/: authority_scope.rs  capability.rs  capability_exchange.rs  capability_lineage.rs  capability_root.rs  capability_validation.rs  delegated_authority.rs  delegation.rs  external_capability.rs  mod.rs  revocation.rs  sovereign_scope.rs  treaty_capability.rs
execution-core/src/certification/: mod.rs
execution-core/src/checkpoint/: checkpoint_restore.rs  checkpoint_root.rs  checkpoint_snapshot.rs  checkpoint_validation.rs  mod.rs  snapshot_codec.rs
execution-core/src/civilization/: civilization.rs  civilization_flow.rs  civilization_package.rs  civilization_root.rs  civilization_validation.rs  economy.rs  evolution.rs  genesis.rs  governance.rs  mod.rs  recovery.rs  runtime.rs  settlement.rs  validation.rs
execution-core/src/civilization_interaction/: conflict.rs  evolution.rs  migration.rs  mod.rs  recovery.rs  runtime.rs  trade.rs  validation.rs
execution-core/src/civilization_scheduler/: ecology.rs  evolution.rs  faction.rs  mod.rs  priority.rs  recovery.rs  runtime.rs  validation.rs
execution-core/src/client_protocol/: mod.rs
execution-core/src/codec/: canonical.rs  canonical_codec.rs  canonical_package.rs  decode.rs  decode_state.rs  encode.rs  mod.rs  package_decode.rs  package_encode.rs  package_roundtrip.rs  package_validation.rs  package_version.rs  schema.rs  version.rs
execution-core/tests/: abi_tests.rs  adversarial_runtime_tests.rs  adversarial_sync_tests.rs  amendment_transition_tests.rs  appliance_orchestration_tests.rs  arbitration_tests.rs  archive_operations_tests.rs  arena_vanguard_certification_tests.rs  arena_vanguard_live_session_tests.rs  arena_vanguard_playable_tests.rs  authority_tests.rs  autonomous_civilization_tests.rs  browser_gateway_tests.rs  budget_validation_tests.rs  canonical_determinism_tests.rs  canonical_hash_freeze_tests.rs  capability_exchange_tests.rs  capability_lineage_tests.rs  capability_revocation_tests.rs  chain_restore_tests.rs  checkpoint_catchup_tests.rs  checkpoint_exchange_tests.rs  checkpoint_restore_tests.rs  checkpoint_snapshot_tests.rs  ci_orchestration_tests.rs  civilization_flow_tests.rs  civilization_genesis_vector_tests.rs  civilization_package_tests.rs  civilization_root_stability_tests.rs  clause_execution_tests.rs  codec_stability_tests.rs  consensus_tests.rs  constitutional_budget_tests.rs  constitutional_continuity_tests.rs  constitutional_economics_tests.rs  constitutional_interoperability_tests.rs  constitutional_review_tests.rs  constitutional_scope_tests.rs  contract_hash_tests.rs  convergence_proof_tests.rs  (+237 more)
runtime/everarcade-runtime/: Cargo.toml
sdk/everarcade-sdk/: Cargo.toml
src-bin-everarcade/: Cargo.toml
src-bin-everarcade/src/: arena_vanguard.rs  config.rs  lease.rs  main.rs  operator_identity.rs  product.rs  release.rs  runtime_snapshot.rs  world.rs
(+6345 files in other folders)
