[workspace]
members = [
    "everarcade-abi",
    "execution-core",
    "contract-api",
    "contracts/set-contract",
    "contracts/increment-contract",
    "contracts/counter-world",
    "contracts/counter-contract",
    "everarcade-host",
    "sdk/everarcade-sdk",
    "sdk/everarcade-world-sdk",
    "sdk/everarcade-entity-sdk",
    "sdk/everarcade-simulation-sdk",
    "sdk/everarcade-economy-sdk",
    "sdk/everarcade-governance-sdk",
    "sdk/client-bridge",
    "src-bin-everarcade",
    "runtime/client",
    "runtime/renderer-client",
]

resolver = "2"
