[workspace]
members = [
    "everarcade-abi",
    "crates/transport-core",
    "crates/canonicalizer-kernel",
    "crates/rustrigs/inventory",
    "crates/rustrigs/combat",
    "execution-core",
    "contract-api",
    "control-plane",
    "provider-evernode",
    "rustrigs",
    "contracts/set-contract",
    "contracts/increment-contract",
    "contracts/counter-world",
    "contracts/counter-contract",
    "contracts/arena-proof-contract",
    "everarcade-host",
    "sdk/everarcade-sdk",
    "sdk/everarcade-world-sdk",
    "sdk/everarcade-entity-sdk",
    "sdk/everarcade-simulation-sdk",
    "sdk/everarcade-economy-sdk",
    "sdk/everarcade-governance-sdk",
    "sdk/client-bridge",
    "src-bin-everarcade",
    "runtime/client",
    "runtime/renderer-client",
    "tools",
    "runtime/content-registry",
    "runtime/everarcade-runtime",
    "studio-gui",
]

resolver = "2"
