[package]
name = "execution-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "execution_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
wasmtime = { version = "26", default-features = false, features = ["cranelift", "runtime"] }

contract-api = { path = "../contract-api" }
set-contract = { path = "../contracts/set-contract" }
increment-contract = { path = "../contracts/increment-contract" }
