[package]
name = "execution-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "execution_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
bincode = "1"
thiserror = "1"
everarcade-abi = { path = "../everarcade-abi" }
wasmtime = { version = "26", default-features = false, features = ["cranelift", "runtime"] }



contract-api = { path = "../contract-api" }
rustrigs = { path = "../rustrigs" }
set-contract = { path = "../contracts/set-contract" }
increment-contract = { path = "../contracts/increment-contract" }


[dev-dependencies]
control-plane = { path = "../control-plane" }
tempfile = "3"
wat = "1"
