[package]
name = "everarcade-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "everarcade"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

toml = "0.8"

execution-core = { path = "../execution-core" }
transport-core = { path = "../crates/transport-core" }
