[package]
name = "canonicalizer-kernel"
version = "0.1.0"
edition = "2021"
description = "Standalone ArenaState canonicalization kernel for formal verification"

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"

[dev-dependencies]
