[package]
name = "everarcade-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "everarcade_runtime"
path = "src/lib.rs"

[[bin]]
name = "runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
